[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Levels/PlayLevel/WinView/WinView.gd" type="Script" id=1]
[ext_resource path="res://fonts/Coaster Quake - Personal Use.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Levels/MainMenuLevel/main_menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/Character/stars-under.png" type="Texture" id=4]
[ext_resource path="res://assets/Character/stars-progress.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.184314, 0.184314, 0.698039 )
border_width_left = 4
border_width_top = 4
border_width_right = 2
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false

[node name="WinView" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37744
margin_right = 2.37744
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
margin_left = 1.0
margin_right = 41.0
margin_bottom = 139.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTime" type="Control" parent="Control/Panel"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.949
anchor_bottom = 0.311
margin_left = 2.79964
margin_top = -14.6996
margin_right = 3.40759
margin_bottom = -14.2916

[node name="ColorRect2" type="ColorRect" parent="Control/Panel/CurrentTime"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -593.8
margin_top = 9.12723
margin_right = 1.20044
margin_bottom = 72.5448
color = Color( 0.443137, 0.443137, 0.443137, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CurrentTimeLabel" type="Label" parent="Control/Panel/CurrentTime/ColorRect2"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = -30.8
margin_right = 77.8
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control/Panel/CurrentTime"]
margin_left = 3.90674
margin_right = 247.907
margin_bottom = 50.7187
color = Color( 0.839216, 0.839216, 0.839216, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/CurrentTime/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  Current Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTime" type="Control" parent="Control/Panel"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.949
anchor_bottom = 0.311
margin_left = 2.79964
margin_top = 68.3004
margin_right = 3.40759
margin_bottom = 46.7084

[node name="ColorRect2" type="ColorRect" parent="Control/Panel/BestTime"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -723.8
margin_top = 17.0
margin_right = -128.8
margin_bottom = 80.4176
color = Color( 0.443137, 0.443137, 0.443137, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Control/Panel/BestTime/ColorRect2"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = -30.8
margin_right = 77.8
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control/Panel/BestTime"]
margin_left = 483.001
margin_right = 727.001
margin_bottom = 50.7187
color = Color( 0.839216, 0.839216, 0.839216, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/BestTime/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your Best Time"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldRecord" type="Control" parent="Control/Panel"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.949
anchor_bottom = 0.311
margin_left = 7.17715
margin_top = 170.461
margin_right = 5.7851
margin_bottom = 177.869
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Control/Panel/WorldRecord"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -712.0
margin_top = 44.0
margin_right = -12.0
margin_bottom = 107.0
color = Color( 0.443137, 0.443137, 0.443137, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="WorldRecordLabel" type="Label" parent="Control/Panel/WorldRecord/ColorRect2"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = -30.8
margin_right = 77.8
margin_bottom = -2.0
custom_fonts/font = SubResource( 2 )
text = "00:00:000"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control/Panel/WorldRecord"]
margin_left = 2.0
margin_right = 727.0
margin_bottom = 51.0
color = Color( 0.839216, 0.839216, 0.839216, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/WorldRecord/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "World Record"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Control/Panel"]
margin_left = 176.4
margin_top = 363.445
margin_right = 492.4
margin_bottom = 415.445
rect_scale = Vector2( 1.5, 1.5 )
max_value = 5.0
step = 0.5
value = 2.5
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.980392, 1, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Control/Panel/TextureProgress"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = 8.0
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 5.0
step = 0.5
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="Control/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="Control/Panel/Buttons"]
margin_left = 467.0
margin_top = -93.0
margin_right = 770.0
margin_bottom = -21.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/Buttons/NextLevelButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "NEXT"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="Control/Panel/Buttons"]
margin_left = 146.0
margin_top = -93.0
margin_right = 451.0
margin_bottom = -21.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Control/Panel/Buttons/RetryButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "AGAIN!"
align = 1
valign = 1

[node name="QuitButton" type="Button" parent="Control/Panel/Buttons"]
margin_left = 48.0
margin_top = -93.0
margin_right = 130.0
margin_bottom = -21.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/Buttons/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Quit 
=("
align = 1
valign = 1
[connection signal="value_changed" from="Control/Panel/TextureProgress/HSlider" to="." method="_on_rating_change"]
[connection signal="pressed" from="Control/Panel/Buttons/NextLevelButton" to="." method="next"]
[connection signal="pressed" from="Control/Panel/Buttons/RetryButton" to="." method="retry"]
[connection signal="pressed" from="Control/Panel/Buttons/QuitButton" to="." method="quit"]
